    [OPENJPA-2107] - ManagedCache conflict due adding an entity 2 times in the same query.
    [OPENJPA-2117] - XML overriding column names for 1xM attributes causes exception.
    [OPENJPA-2119] - Update org.apache.openjpa.persistence.util.SourceCode
    [OPENJPA-2122] - VerifyError with Java 7 when using javaagent or dynamic container enhancement

Improvement

    [OPENJPA-302] - PCEnhancer needs target classes on classpath
    [OPENJPA-487] - Generated SUBSTRING SQL is ugly and inefficient
    [OPENJPA-1555] - SQLBuffer code cleanup
    [OPENJPA-1777] - Allow setting of diagonstic context for each slice in a more flexible manner
    [OPENJPA-1778] - Improved error information for unenhanced classes.
    [OPENJPA-1798] - Improve messages in localize.properties
    [OPENJPA-1803] - Unwrap EntityManager to Connection
    [OPENJPA-1847] - Use a single connection when generating schema
    [OPENJPA-1863] - update HSQL dictionary for HSQLDB 2.0
    [OPENJPA-1917] - Cache column alias in SelectImpl
    [OPENJPA-1937] - Document OpenJPAEntityManager.evict methods
    [OPENJPA-1945] - Improve aspects of the OpenBooks sample
    [OPENJPA-1972] - DB2 V9.7 changed the default behavior concerning blocking behavior with isolation levels greater then read uncommitted
    [OPENJPA-1990] - Skip getting extend exception text when running on DB2
    [OPENJPA-1999] - Optional support for non-sequential positional parameters
    [OPENJPA-2014] - Allow proxies to stay in place when Detaching
    [OPENJPA-2020] - Make some members of StateManagerImpl protected to allow for greater extensability
    [OPENJPA-2031] - Unable to import maven projects with m2e version 1.0
    [OPENJPA-2042] - Diagnostics for Application Managed EntityManagerFactory leaks.
    [OPENJPA-2043] - OpenJPAId hashCode() value needs to be consistent after serialization process
    [OPENJPA-2047] - Document the impact of Persistence Aware classes
    [OPENJPA-2068] - Improve performance of java.util.Calendar fields