@@ -343,6 +343,8 @@ in each release of OpenJPA.</P>
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2122'>OPENJPA-2122</a>] -         VerifyError with Java 7 when using javaagent or dynamic container enhancement
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2124'>OPENJPA-2124</a>] -         Use of XMLValueHandler results in a NullPointerException when classloader does not provide package support
+</li>
 </ul>
             
 <h2>        Improvement
@@ -400,7 +402,13 @@ in each release of OpenJPA.</P>
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2087'>OPENJPA-2087</a>] -         Remove or limit the use of the ConcreteClassGenerator
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2116'>OPENJPA-2116</a>] -         Scrape the barrel for performance juice
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2120'>OPENJPA-2120</a>] -         Add new option to eliminate reflection calls from enhancer generated IdClass PC copy operations
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2128'>OPENJPA-2128</a>] -         Add a boolean to FieldMetaData to denote whether or not a field has a @EmbeddedId annotation.
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2130'>OPENJPA-2130</a>] -         Enable Java 7 testing by allowing test cases to compile targeting to 1.7  
 </li>
 </ul>
     
@@ -414,8 +422,6 @@ in each release of OpenJPA.</P>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1934'>OPENJPA-1934</a>] -         contribute an openjpa-maven-plugin 
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2108'>OPENJPA-2108</a>] -         Allow an option to terminate MappingTool-generated SQL with a character other than semicolon   
-</li>
-<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-2111'>OPENJPA-2111</a>] -         Optimize column based ResultSet lookup whereever feasible
 </li>
 </ul>
                             
